# realtime_voiceagent_mcp_rag_webrtc

./: README.md  results_skus.csv  webrtc_test.html
android_client/app/: build.gradle.kts
android_client/app/src/main/: AndroidManifest.xml
android_client/app/src/main/java/com/verizon/telecomagent/: MainActivity.kt  SignalingClient.kt  WebRtcClient.kt
android_client/app/src/main/res/layout/: activity_main.xml
mcp_server/: Dockerfile  app.py  requirements.txt
replit-telecom-agent/: pyproject.toml  replit.nix
replit-telecom-agent/knowledge_base/documents/: kb_214988.txt  kb_219605.txt  kb_225759.txt  kb_230249.txt  kb_233421.txt
replit-telecom-agent/knowledge_base/metadata/: metadata.jsonl
replit-telecom-agent/scripts/: initialize_kb.py
replit-telecom-agent/src/: audio_services.py  config.py  context.py  ingestion.py  main.py  rag_pipeline.py  speech_enhancer.py
webrtc_server/: app.py  requirements.txt
